--- a/.github/workflows/dev-env.yml
+++ b/.github/workflows/dev-env.yml
@@ -21,5 +21,5 @@ jobs:
         with:
           push: true
           tags: user/app:latest
-      - name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
+          secrets: |
+            GIT_AUTH_TOKEN=${{ secrets.MYTOKEN }}
