--- a/.github/workflows/dev-env.yml
+++ b/.github/workflows/dev-env.yml
@@ -9,17 +9,16 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Login to GitHub Packages Docker Registry
-        uses: docker/login-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
         with:
-          registry: docker.pkg.github.com
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           push: true
           tags: user/app:latest
-          secrets: |
-            GIT_AUTH_TOKEN=${{ secrets.MYTOKEN }}
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
