--- a/.github/workflows/dev-env.yml
+++ b/.github/workflows/dev-env.yml
@@ -9,16 +9,16 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Login to GitHub Container Registry
+     - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push
-         id: docker_build
         uses: docker/build-push-action@v2
         with:
+          context: .
           push: true
-          tags: user/app:latest
+          tags: ghcr.io/qwanjai/bookinfo-ratings:dev
 
