--- a/.github/workflows/dev-env.yml
+++ b/.github/workflows/dev-env.yml
@@ -7,8 +7,9 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      # Don't need to checkout ('docker/build-push-action@v2' use git context to build by default)
+      # - name: Checkout code
+      #   uses: actions/checkout@v2
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
@@ -20,7 +21,7 @@ jobs:
         with:
           push: true
           tags: ghcr.io/qwanjai/bookinfo-ratings:dev
-deploy:
+  deploy:
     needs: build
     runs-on: ubuntu-20.04
     steps:
