--- a/k8s/helm-values/values-bookinfo-dev-ratings.yaml
+++ b/k8s/helm-values/values-bookinfo-dev-ratings.yaml
@@ -6,7 +6,6 @@ ratings:
   imagePullSecrets: registry-bookinfo
   port: 8080
   healthCheckPath: "/health"
-  mongodbPasswordExistingSecret: bookinfo-uat-ratings-mongodb-secret
 ingress:
   host: bookinfo.dev.opsta.net
   path: "/student120/ratings(/|$)(.*)"
@@ -14,7 +13,7 @@ ingress:
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /$2
-  
 extraEnv:
   SERVICE_VERSION: v2
   MONGO_DB_URL: mongodb://bookinfo-dev-ratings-mongodb:27017/ratings
+  COMMIT_SHA : CHANGEME
