--- a/k8s/helm-values/values-bookinfo-uat-ratings.yaml
+++ b/k8s/helm-values/values-bookinfo-uat-ratings.yaml
@@ -6,7 +6,6 @@ ratings:
   imagePullSecrets: registry-bookinfo
   port: 8080
   healthCheckPath: "/health"
-  mongodbPasswordExistingSecret: bookinfo-uat-ratings-mongodb-secret
 ingress:
   host: bookinfo.uat.opsta.net
   path: "/student120/ratings(/|$)(.*)"
@@ -17,3 +16,4 @@ ingress:
 extraEnv:
   SERVICE_VERSION: v2
   MONGO_DB_URL: mongodb://bookinfo-uat-ratings-mongodb:27017/ratings
+  COMMIT_SHA : CHANGEME
